# MeetingSummaryLocal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  constraints-docker.txt  docker-compose.yml  pyproject.toml  run
meeting_summary/: __init__.py  __main__.py  config.py  diarization.py  logging_utils.py  main.py  markdown_writer.py  models.py  ollama_client.py  processor.py  transcriber.py  watcher.py
meeting_summary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
meeting_summary/prompts/: __init__.py  summary.md
tasks/: lessons.md  todo.md
tests/: test_config.py  test_diarization.py  test_main.py  test_markdown_writer.py  test_ollama_client.py  test_processor.py  test_project_files.py  test_transcriber.py  test_watcher.py
